src/test/ui/mismatched_types/for-loop-has-unit-body.stderr
error[E0308]: mismatched types
  --> $DIR/for-loop-has-unit-body.rs:3:9
   |
LL |         x
   |         ^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
